Fixed line spacing in copyright class.

--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ blockquote:before {
 
 .copyright {
 	font-size: .7em;
-  line-height: .7em;
+  line-height: 1.5em;
 }
 
 .marker {
